-- add usrWiFiInfos